# pawfectlygtk-fe

./: meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: addpet.ui  addpet.vala  application.vala  content.ui  content.vala  dashboard.ui  dashboard.vala  database.vala  editmypet.ui  editmypet.vala  header.ui  header.vala  leftpict.ui  leftpict.vala  main.vala  meson.build  mypets.ui  mypets.vala  mypetstyle.css  openfile.vala  pawfectly.gresource.xml  petdata.txt  petdata.vala  rightcon.ui  rightcon.vala  rightconup.ui  rightconup.vala  styles.css  window.ui  window.vala
